--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "mocha": "^9.1.2",
     "mongodb": "^4.1.2"
+  },
+  "devDependencies":{
+    "mocha": "^9.1.2"
   }
 }
